#7427 Extended Datatable Filter - Added new collection and array filter modes (contains, containsAny, containsAll, containsNone)